# longshot

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: kalshi_schema.md  longshot_bias_on_prediction_markets.md  portfolio_screening_process.md
longshot/: config.py
longshot/api/: client.py  models.py  rate_limiter.py
longshot/ingestion/: markets.py  snapshot.py  trades.py
longshot/storage/: athena.py  db.py  s3.py
notebooks/: 01_descriptive_analysis.py  02_historical_snapshot.py  03_longshot_screening.py  04_longshot_opportunity.py  05_daily_market_pull.py  06_daily_event_pull.py  07_daily_market_analysis.py  08_longshot_cohort_deep_dive.py  08_longshot_dte_deep_dive.py  09_longshot_investability.py  10_portfolio_construction.py
notebooks/html/: 01_descriptive_analysis.html  01_descriptive_analysis.ipynb  01_descriptive_analysis.md  03_longshot_screening.html  04_longshot_opportunity.html  07_daily_market_analysis.html  08_longshot_cohort_deep_dive.html  08_longshot_dte_deep_dive.html  09_longshot_investability.html  10_portfolio_construction.html
scripts/: ingest_daily_events.py  ingest_daily_markets.py  ingest_events.py  ingest_markets.py  ingest_snapshot.py
